[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/FadeInOutLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://environment/abilities/demo/demo_ability.gd" type="Script" id=2]
[ext_resource path="res://environment/WalkToPoints.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="DemoAbility" type="Node2D" groups=[
"demo_ability",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="SelectableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectableArea"]
shape = SubResource( 1 )

[node name="FadeInOutLabel" parent="." instance=ExtResource( 1 )]
text = "Select"

[node name="WalkToPoints" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 16 )
